# Tarefas-CG

./: CMakeLists.txt  README.md  apresentacao.pptx  roteiro-video.md  tutorial_vivenciais.md
assets/: scene.json
include/: ObjParser.h  SceneParser.h  Trajectory.h
src/: MainDiorama.cpp  ObjParser.cpp  SceneParser.cpp  Trajectory.cpp
